set base for show own tweets

--- a/Views/Users/Dashboard.cshtml
+++ b/Views/Users/Dashboard.cshtml
@@ -1,1 +1,10 @@
 <h1>Hi @User.Identity.Name</h1>
+
+<span data-user-id="@Model" id="userId"></span>
+
+<div id="app">
+</div>
+
+@section Scripts {
+    <script src="/dist/js/tweets/listOwn/Main.js"></script>
+}
