pass data to all views

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,4 @@
 
 <span id="userId" data-user-id=@Model></span>
 
-<div id="app">
-</div>
-
-@section Scripts {
-    <script src="/dist/js/tweets/create/Main.js"></script>
-}
+<h1>Home</h1>
