--- a/Views/Shared/_NavHeader.cshtml
+++ b/Views/Shared/_NavHeader.cshtml
@@ -10,6 +10,9 @@
             <li>
                 @Html.ActionLink("Logout", "Logout", "Accounts")
             </li>
+            <li>
+                <div id="create-tweet-app"></div>
+            </li>
         } else {
             <li>
                 @Html.ActionLink("Login", "Login", "Accounts")
