--- a/Views/Users/Dashboard.cshtml
+++ b/Views/Users/Dashboard.cshtml
@@ -1,10 +1,10 @@
 <h1>Hi @User.Identity.Name</h1>
 
-<span data-user-id="@Model" id="userId"></span>
+<span data-profile-id="@Model" id="profileId"></span>
 
 <div id="app">
 </div>
 
 @section Scripts {
-    <script src="/dist/js/tweets/listOwn/Main.js"></script>
+    <script src="/dist/js/tweets/list/Main.js"></script>
 }
