set following action

--- a/Views/Users/Show.cshtml
+++ b/Views/Users/Show.cshtml
@@ -1,10 +1,12 @@
 @model TweetishApp.Models.UserProfileVM
 
 <h1>@Model.Nickname</h1>
+<div id="follow-btn-component"></div>
 
 <span data-profile-id="@Model.UserId" id="profileId"></span>
 <div id="app"></div>
 
 @section Scripts {
     <script src="/dist/js/tweets/list/Main.js"></script>
+    <script src="/dist/js/following/followBtn/Main.js"></script>
 }
