--- a/Views/Shared/_NavHeader.cshtml
+++ b/Views/Shared/_NavHeader.cshtml
@@ -11,7 +11,7 @@
                 @Html.ActionLink("Logout", "Logout", "Accounts")
             </li>
             <li>
-                <div id="create-tweet-app"></div>
+                <div id="create-tweet-component"></div>
             </li>
         } else {
             <li>
