add search users

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,5 +27,6 @@
     @if (User.Identity.IsAuthenticated){
         <script src="/dist/js/tweets/create/Main.js"></script>
     }
+    <script src="/dist/js/users/search/Main.js"></script>
 </body>
 </html>
