--- a/Views/Shared/_NavHeader.cshtml
+++ b/Views/Shared/_NavHeader.cshtml
@@ -21,5 +21,8 @@
                 @Html.ActionLink("Register", "Register", "Accounts")
             </li>
         }
+        <li>
+            <div id="search-users-component"></div>
+        </li>
     </ul>
 </nav>
