--- a/Views/Users/Dashboard.cshtml
+++ b/Views/Users/Dashboard.cshtml
@@ -2,9 +2,11 @@
 
 <span data-profile-id="@Model" id="profileId"></span>
 
-<div id="app">
-</div>
+<div id="create-comment-component"></div>
+
+<div id="app"></div>
 
 @section Scripts {
     <script src="/dist/js/tweets/list/Main.js"></script>
+    <script src="/dist/js/comments/create/Main.js"></script>
 }
